# 3UTR-Quant

./: .gitattributes  LICENSE  README.md
config/: bulkapa_template.yaml  config.yaml  config.yml  genes_preprocessing_template.yaml
envs/: apatools.yml  bulkanalysis.yml  subread.yml
envs/apatools/: .gitignore  .gitlab-ci.yml  README.md  initial_setup.md  pyproject.toml
envs/apatools/apatools/: apaclip.py  apanalysis.py  filtering.py  scapa.py  scmodality.py  scplot.py
envs/apatools/config/: bulkapa_template.yaml
envs/apatools/scripts/: bulkapa.py  scapa_preprocessing.py
envs/bulkanalysis/: .bandit  .pre-commit-config.yaml  README.md  initial_setup.md  pyproject.toml
envs/bulkanalysis/bulkanalysis/: dapars.py  dge.py  filtering.py  loader.py  normalization.py  plot.py
envs/bulkanalysis/config/: genes_preprocessing_template.yaml
envs/bulkanalysis/scripts/: aggregate_featureCounts_output.py  genes_preprocessing.py
envs/genomemanager/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
envs/genomemanager/genomemanager/: annotation.py  coverage.py  overlaps.py  utrs.py
envs/genomemanager/scripts/: create_focused_filtered_annotation.py  create_focused_ground_truth_no_overlaps.py  create_ground_truth_no_overlaps.py  divide_bam_per_strand.sh  from_bam_to_coverage_bed.sh  overlaps.py  transcript_to_chromosome_coverage.py
envs/genomemanager/tests/: test_functions.py
envs/kallistomanager/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
envs/kallistomanager/.reuse/: dep5
envs/kallistomanager/.reuse/templates/: idiap_template.jinja2
envs/kallistomanager/kallistomanager/: loader.py
workflow/: Snakefile  run_Snakemake.sh
workflow/rules/: apa_analysis.smk  bulk_analysis.smk  gtf.smk  quant.smk
