[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "apatools"
version = "0.1"
description = "describe your package here"
authors = ["Lisa Fournier <lisa.fournier@idiap.ch>"]
readme = "README.md"
license = "MIT" # MIT, BSD-3-Clause, ...
packages = [{include = "apatools"}] # editable mode

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
urllib3 = "^2.0.5"
scanpy = "^1.9.5"
scipy = "^1.11.2"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
click = "^8.1.3"

[tool.poetry.scripts]
run = "package.commands:run"
